--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
 
 	<meta property="og:image" content="path/to/image.jpg">
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
@@ -82,7 +82,7 @@
 				<div class="big__slider-content">
 					<div class="container">
 						<div class="big__slider-content_container">
-							<div class="big__slider-title">Корпоративное  питание</div>
+							<div class="big__slider-title">Корпоративное питание</div>
 							<div class="big__slider-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
 							<div class="big__slider-buttons inline-middle">
 								<div class="big__slider-button">
@@ -98,7 +98,7 @@
 				<div class="big__slider-content">
 					<div class="container">
 						<div class="big__slider-content_container">
-							<div class="big__slider-title">Корпоративное  питание</div>
+							<div class="big__slider-title">Корпоративное питание</div>
 							<div class="big__slider-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
 							<div class="big__slider-buttons inline-middle">
 								<div class="big__slider-button">
@@ -114,7 +114,7 @@
 				<div class="big__slider-content">
 					<div class="container">
 						<div class="big__slider-content_container">
-							<div class="big__slider-title">Корпоративное  питание</div>
+							<div class="big__slider-title">Корпоративное питание</div>
 							<div class="big__slider-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
 							<div class="big__slider-buttons inline-middle">
 								<div class="big__slider-button">
@@ -130,7 +130,7 @@
 				<div class="big__slider-content">
 					<div class="container">
 						<div class="big__slider-content_container">
-							<div class="big__slider-title">Корпоративное  питание</div>
+							<div class="big__slider-title">Корпоративное питание</div>
 							<div class="big__slider-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
 							<div class="big__slider-buttons inline-middle">
 								<div class="big__slider-button">
@@ -146,7 +146,7 @@
 				<div class="big__slider-content">
 					<div class="container">
 						<div class="big__slider-content_container">
-							<div class="big__slider-title">Корпоративное  питание</div>
+							<div class="big__slider-title">Корпоративное питание</div>
 							<div class="big__slider-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
 							<div class="big__slider-buttons inline-middle">
 								<div class="big__slider-button">
@@ -221,13 +221,13 @@
 						<div class="parallelogram-item__content">
 
 							<div class="parallelogram__content-block">
-								<h1>Первая казахстанская  сервисная компания</h1>
+								<h1>Первая казахстанская сервисная компания</h1>
 								<p data-size="middle" data-font_weight="light">Мы построили нашу репутацию на ценностях профессионализма, инноваций, технических знаний, качества, здоровья и безопасности.</p>
 							</div>
 
 							<div class="parallelogram__content-block">
 								<h5 data-font_weight="bold">Уверенное развитие</h5>
-								<p data-size="normal" data-font_weight="light">Высокие конкуренция и стандарты качества позволили нам в самые кратчайшие сроки достичь очень высокого уровня сервиса, сравнимого с международными игроками и в некоторых моментах даже превзойти его.</p>
+								<p data-size="normal" data-font_weight="light">Высокие конкуренция и стандарты качества позволили нам в самые кратчайшие сроки достичь очень высокого уровня сервиса, сравнимого с международными игроками и в некоторых моментах даже превзойти его.</p>
 							</div>
 
 							<div class="parallelogram__content-block">
@@ -251,7 +251,7 @@
 											<div class="bigger__number">13</div>
 											<div class="bigger__text">лет</div>
 										</div>
-										<p class="stock_blue-p" data-size="large">стабильного развития в работе offshore & onshore</p>
+										<p class="stock_blue-p" data-size="large">стабильного развития в работе offshore & onshore</p>
 									</div>
 
 									<div class="parallelogram-links">
@@ -265,7 +265,7 @@
 											<div class="bigger__number">14</div>
 											<div class="bigger__text">лет</div>
 										</div>
-										<p class="stock_blue-p" data-size="large">стабильного развития в работе offshore & onshore</p>
+										<p class="stock_blue-p" data-size="large">стабильного развития в работе offshore & onshore</p>
 									</div>
 
 									<div class="parallelogram-links">
@@ -282,6 +282,203 @@
 			</div>
 		</div>
 
+	<section class="main__service-slider">
+		<div class="container">
+			<div class="custom-section__title">
+				<h4>Объекты обслуживания</h4>
+			</div>
+		</div>
+		<div class="main__service-slider-container">	
+			<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-services-1.jpg') 50% no-repeat; background-size: cover;">
+				<div class="main__service-slider-content">
+					<div class="main__service-slider-title">Caspian Offshore Construction</div>
+					<div class="main__service-slider-subtitle">Порт курык</div>
+				</div>
+			</a>
+
+			<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-services-2.jpg') 50% no-repeat; background-size: cover;">
+				<div class="main__service-slider-content">
+					<div class="main__service-slider-title">Caspian Offshore Construction</div>
+					<div class="main__service-slider-subtitle">Порт курык</div>
+				</div>
+			</a>
+
+			<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-services-3.jpg') 50% no-repeat; background-size: cover;">
+				<div class="main__service-slider-content">
+					<div class="main__service-slider-title">Caspian Offshore Construction</div>
+					<div class="main__service-slider-subtitle">Порт курык</div>
+				</div>
+			</a>
+
+			<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-services-4.jpg') 50% no-repeat; background-size: cover;">
+				<div class="main__service-slider-content">
+					<div class="main__service-slider-title">Caspian Offshore Construction</div>
+					<div class="main__service-slider-subtitle">Порт курык</div>
+				</div>
+			</a>
+
+			<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-slider-1.jpg') 50% no-repeat; background-size: cover;">
+				<div class="main__service-slider-content">
+					<div class="main__service-slider-title">Caspian Offshore Construction</div>
+					<div class="main__service-slider-subtitle">Порт курык</div>
+				</div>
+			</a>
+
+			<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/inner-page-head-1.jpg') 50% no-repeat; background-size: cover;">
+				<div class="main__service-slider-content">
+					<div class="main__service-slider-title">Caspian Offshore Construction</div>
+					<div class="main__service-slider-subtitle">Порт курык</div>
+				</div>
+			</a>
+		</div>
+		<div class="container">
+			<div class="main__service-slider-footer" data-text_align="right">
+				<a href="#" class="stadrt__button green">Все объекты</a>
+			</div>
+		</div>
+	</section>
+
+	</section>
+
+	<section class="advantages">
+		<div class="section-title__hightlight">
+			<h4>Наши преимущества</h4>
+		</div>
+		<div class="section-advan__container">
+			<div class="container">
+				<div class="col-4 gap-30">
+					<div class="section-advan__item">
+						<div class="section-advan__item-image"><img src="/img/icons/experience-icon.svg" alt="Опыт"></div>
+						<div class="section-advan__item-title">Опыт</div>
+						<div class="section-advan__item-desc">Lorem ipsum dolor sit amet, consec</div>
+					</div>
+					<div class="section-advan__item">
+						<div class="section-advan__item-image"><img src="/img/icons/quality-icon.svg" alt="Система  качества"></div>
+						<div class="section-advan__item-title">Система качества</div>
+						<div class="section-advan__item-desc">Lorem ipsum dolor sit amet, consec</div>
+					</div>
+					<div class="section-advan__item">
+						<div class="section-advan__item-image"><img src="/img/icons/complex-services-icon.svg" alt="Комплексные  услуги"></div>
+						<div class="section-advan__item-title">Комплексные услуги</div>
+						<div class="section-advan__item-desc">Lorem ipsum dolor sit amet, consec</div>
+					</div>
+					<div class="section-advan__item">
+						<div class="section-advan__item-image"><img src="/img/icons/qualified-personnel.svg" alt="Специалисты  высшего класса"></div>
+						<div class="section-advan__item-title">Специалисты высшего класса</div>
+						<div class="section-advan__item-desc">Lorem ipsum dolor sit amet, consec</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="fullwidht_video" style="background: linear-gradient(288.47deg, rgba(215, 237, 118, 0.9) -2.3%, rgba(195, 233, 165, 0.9) 59.17%, rgba(156, 224, 255, 0.9) 91.37%), url('/img/slider/slider-photo.jpg') 50% no-repeat; background-size: cover;">
+		<a href="#">
+			<div class="container">
+				<div class="video__container inline-middle">
+					<div class="video__title">Видео о SCS</div>
+					<div class="video__icon">
+						<div class="video__icon-block">
+							<img src="/img/icons/play.svg" alt="Посмотреть">
+						</div>
+					</div>
+				</div>
+			</div>
+		</a>
+	</section>
+
+	<section class="footer__custom-section">
+		<div class="g-content">
+			
+
+			<div class="footer__custom-section_first-container">
+				<div class="footer__custom-section_first">
+					<div class="owl-carousel f__c-section_first-slider">
+						<div class="f__c-section_f-slider__item">
+							<div class="f__c-s_f-s__item-title">
+								<h2>Мы внедрили facility management</h2>
+							</div>
+							<div class="f__c-s_f-s__item-subtitle">18.02.2020</div>
+							<div class="f__c-s_f-s__item-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+							<div class="f__c-s_f-s__item-footer"><a href="#" class="stadrt__button green">Узнать больше</a></div>
+						</div>
+						<div class="f__c-section_f-slider__item">
+							<div class="f__c-s_f-s__item-title">
+								<h2>Мы не внедрили facility management</h2>
+							</div>
+							<div class="f__c-s_f-s__item-subtitle">18.02.2020</div>
+							<div class="f__c-s_f-s__item-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, error.</div>
+							<div class="f__c-s_f-s__item-footer"><a href="#" class="stadrt__button green">Узнать больше</a></div>
+						</div>
+					</div>
+				</div>
+				<div class="footer__custom-section_second">
+					<div class="f__c-section_second-title">
+						<h4>Карьера</h4>
+					</div>
+					<div class="f__c-section_second-content" style="background: linear-gradient(0deg, rgba(0, 91, 150, 0.75), rgba(0, 91, 150, 0.75)), url('/img/backgrounds/index-page-career-background.jpg') 50% no-repeat; background-size: cover;">
+						<div class="f__c-s_s-c__title">Стань частью команды SCS</div>
+						<div class="f__c-s_s-c__content">Вместе мы становимся сильнее</div>
+						<div class="f__c-s_s-c__footer"><a href="#" class="text__button white">Вакансии</a></div>
+					</div>
+				</div>
+			</div>
+
+
+		</div>
+	</section>
+
+	<section class="main__footer main__index-page__footer">
+		<div class="container">
+			<div class="col-2">
+				<div class="footer__block">
+
+					<div class="footer__head inline-middle">
+						<div class="footer__logotype">
+							<img src="/img/SCS-footer-logo.svg" alt="SCS">
+						</div>
+						<div class="footer__phone inline-middle">+7 (7292) <span class="hightlight">533 525</span><img src="/img/icons/call-white.svg" alt="Телефон"></div>
+					</div>
+
+					<div class="footer__content">
+						<div class="col-a_a gap-50">
+							<div class="footer_copyrite">
+								© 2019–2020 <br> Ships Catering Supply 
+							</div>
+							<div class="footer__address">
+								
+								<div class="footer__address-head inline-middle">
+									<a href="#" class="active">Офис в Актау</a>
+									<a href="#">Офис в Атырау</a>
+								</div>
+
+								<div class="footer__address-content" id="f__a-content">
+									130000, Казахстан, Мангистауская обл., микрорайон 10, дом 2, офис 2
+								</div>
+
+							</div>
+
+						</div>
+						<div class="footer__foo">
+							<div class="col-2">
+								<a href="#">Developers</a>
+								<a href="#">office@s-c-s.kz</a>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="footer__block">
+					<div class="footer__block-logotypes">
+						<div class="inline-middle">
+							<div class="footer__block-logo_item"><img src="/img/logotypes/ISO-9001.svg" alt="9001"></div>
+							<div class="footer__block-logo_item"><img src="/img/logotypes/ISO-22000.svg" alt="22000"></div>
+							<div class="footer__block-logo_item"><img src="/img/logotypes/UKAS.svg" alt="UKAS"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<script src="js/scripts.min.js"></script>
