--- a/app/index.html
+++ b/app/index.html
@@ -262,7 +262,7 @@
 
 					<div class="parallelogram__item second">
 						<div class="parallelogram-item__title"><h4>Факты & Цифры</h4></div>
-						<div class="parallelogram-item__content">
+						<div class="parallelogram-item__content p-i__content-second">
 							
 							<div class="owl-carousel parallelogram__content-slider">
 
@@ -413,7 +413,7 @@
 			
 
 			<div class="footer__custom-section_first-container">
-				<div class="footer__custom-section_first">
+				<div class="footer__custom-section_first f__c-s_f-footer">
 					<div class="owl-carousel f__c-section_first-slider">
 						<div class="f__c-section_f-slider__item">
 							<div class="f__c-s_f-s__item-title">
