--- a/app/index.html
+++ b/app/index.html
@@ -15,17 +15,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<meta property="og:image" content="path/to/image.jpg">
-	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="img/favicon/favicon-64x64.png" type="image/x-icon">
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
 
 	<!-- Chrome, Firefox OS and Opera -->
-	<meta name="theme-color" content="#000">
+	<meta name="theme-color" content="#005b96">
 	<!-- Windows Phone -->
-	<meta name="msapplication-navbutton-color" content="#000">
+	<meta name="msapplication-navbutton-color" content="#005b96">
 	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#000">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#005b96">
 
 	<link rel="stylesheet" href="css/main.min.css">
 
@@ -33,8 +33,9 @@
 
 <body>
 
+	<!-- HEADER -->
 	<header class="fixed-header">
-		
+		<!-- TOP Header -->
 		<div class="top-header">
 			<div class="container">
 				<div class="top-header__content inline-middle">
@@ -51,7 +52,7 @@
 				</div>
 			</div>
 		</div>
-
+		<!-- TOP Header -->
 		<!-- Mobile menu -->
 		<div class="nav-menu_mobile">
 			<div class="g-content">
@@ -83,7 +84,6 @@
 			</div>
 		</div>
 		<!-- Mobile menu -->
-
 		<!-- Main menu -->
 		<div class="nav-menu">
 			<div class="g-content">
@@ -107,9 +107,10 @@
 			</div>
 		</div>
 		<!-- Main menu -->
-
 	</header>
+	<!-- HEADER -->
 
+	<!-- Big slider -->
 	<section class="big__slider">
 		<div class="big__slider-container">
 			<div class="big__slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('img/slider/slider-photo.jpg') 50% no-repeat; background-size: cover;">
@@ -208,6 +209,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- Big slider -->
 
 	<section class="fullframe__images">
 		<div class="fullframe-section">
@@ -240,23 +242,19 @@
 					<div class="parallelogram__item first">
 						<div class="parallelogram-item__title"><h4>О ships catering supply</h4></div>
 						<div class="parallelogram-item__content">
-
 							<div class="parallelogram__content-block">
 								<h1>Первая казахстанская сервисная компания</h1>
 								<p data-size="middle" data-font_weight="light">Мы построили нашу репутацию на ценностях профессионализма, инноваций, технических знаний, качества, здоровья и безопасности.</p>
 							</div>
-
 							<div class="parallelogram__content-block">
 								<h5 data-font_weight="bold">Уверенное развитие</h5>
 								<p data-size="normal" data-font_weight="light">Высокие конкуренция и стандарты качества позволили нам в самые кратчайшие сроки достичь очень высокого уровня сервиса, сравнимого с международными игроками и в некоторых моментах даже превзойти его.</p>
 							</div>
-
 							<div class="parallelogram__content-block">
 								<div class="parallelogram-links">
 									<a href="#" class="text__button green" data-size="middle">История & Миссия</a>
 								</div>
 							</div>
-
 						</div>
 					</div>
 
@@ -303,61 +301,61 @@
 			</div>
 		</div>
 
-	<section class="main__service-slider">
-		<div class="container">
-			<div class="custom-section__title">
-				<h4>Объекты обслуживания</h4>
+		<section class="main__service-slider">
+			<div class="container">
+				<div class="custom-section__title">
+					<h4>Объекты обслуживания</h4>
+				</div>
 			</div>
-		</div>
-		<div class="main__service-slider-container">	
-			<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-services-1.jpg') 50% no-repeat; background-size: cover;">
-				<div class="main__service-slider-content">
-					<div class="main__service-slider-title">Caspian Offshore Construction</div>
-					<div class="main__service-slider-subtitle">Порт курык</div>
-				</div>
-			</a>
+			<div class="main__service-slider-container">	
+				<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-services-1.jpg') 50% no-repeat; background-size: cover;">
+					<div class="main__service-slider-content">
+						<div class="main__service-slider-title">Caspian Offshore Construction</div>
+						<div class="main__service-slider-subtitle">Порт курык</div>
+					</div>
+				</a>
 
-			<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-services-2.jpg') 50% no-repeat; background-size: cover;">
-				<div class="main__service-slider-content">
-					<div class="main__service-slider-title">Caspian Offshore Construction</div>
-					<div class="main__service-slider-subtitle">Порт курык</div>
-				</div>
-			</a>
+				<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-services-2.jpg') 50% no-repeat; background-size: cover;">
+					<div class="main__service-slider-content">
+						<div class="main__service-slider-title">Caspian Offshore Construction</div>
+						<div class="main__service-slider-subtitle">Порт курык</div>
+					</div>
+				</a>
 
-			<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-services-3.jpg') 50% no-repeat; background-size: cover;">
-				<div class="main__service-slider-content">
-					<div class="main__service-slider-title">Caspian Offshore Construction</div>
-					<div class="main__service-slider-subtitle">Порт курык</div>
-				</div>
-			</a>
+				<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-services-3.jpg') 50% no-repeat; background-size: cover;">
+					<div class="main__service-slider-content">
+						<div class="main__service-slider-title">Caspian Offshore Construction</div>
+						<div class="main__service-slider-subtitle">Порт курык</div>
+					</div>
+				</a>
 
-			<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-services-4.jpg') 50% no-repeat; background-size: cover;">
-				<div class="main__service-slider-content">
-					<div class="main__service-slider-title">Caspian Offshore Construction</div>
-					<div class="main__service-slider-subtitle">Порт курык</div>
-				</div>
-			</a>
+				<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-services-4.jpg') 50% no-repeat; background-size: cover;">
+					<div class="main__service-slider-content">
+						<div class="main__service-slider-title">Caspian Offshore Construction</div>
+						<div class="main__service-slider-subtitle">Порт курык</div>
+					</div>
+				</a>
 
-			<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-slider-1.jpg') 50% no-repeat; background-size: cover;">
-				<div class="main__service-slider-content">
-					<div class="main__service-slider-title">Caspian Offshore Construction</div>
-					<div class="main__service-slider-subtitle">Порт курык</div>
-				</div>
-			</a>
+				<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/index-page-slider-1.jpg') 50% no-repeat; background-size: cover;">
+					<div class="main__service-slider-content">
+						<div class="main__service-slider-title">Caspian Offshore Construction</div>
+						<div class="main__service-slider-subtitle">Порт курык</div>
+					</div>
+				</a>
 
-			<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/inner-page-head-1.jpg') 50% no-repeat; background-size: cover;">
-				<div class="main__service-slider-content">
-					<div class="main__service-slider-title">Caspian Offshore Construction</div>
-					<div class="main__service-slider-subtitle">Порт курык</div>
-				</div>
-			</a>
-		</div>
-		<div class="container">
-			<div class="main__service-slider-footer" data-text_align="right">
-				<a href="#" class="stadrt__button green">Все объекты</a>
+				<a href="#" class="main__service-slider-item" style="background: linear-gradient(0deg, rgba(0, 21, 44, 0.6), rgba(0, 21, 44, 0.6)), url('/img/backgrounds/inner-page-head-1.jpg') 50% no-repeat; background-size: cover;">
+					<div class="main__service-slider-content">
+						<div class="main__service-slider-title">Caspian Offshore Construction</div>
+						<div class="main__service-slider-subtitle">Порт курык</div>
+					</div>
+				</a>
 			</div>
-		</div>
-	</section>
+			<div class="container">
+				<div class="main__service-slider-footer" data-text_align="right">
+					<a href="#" class="stadrt__button green">Все объекты</a>
+				</div>
+			</div>
+		</section>
 
 	</section>
 
@@ -408,6 +406,7 @@
 		</a>
 	</section>
 
+	<!-- Footer MAIN Page -->
 	<section class="footer__custom-section">
 		<div class="g-content">
 			
@@ -448,7 +447,9 @@
 
 		</div>
 	</section>
+	<!-- Footer MAIN Page -->
 
+	<!-- Footer -->
 	<section class="main__footer main__index-page__footer">
 		<div class="container">
 			<div class="col-2">
@@ -486,7 +487,7 @@
 						</div>
 						<div class="footer__foo">
 							<div class="col-2">
-								<a href="https://parallax.pro">PARALLAX.PRO</a>
+								<a href="#">Devolepers</a>
 								<a href="#">office@s-c-s.kz</a>
 							</div>
 						</div>
@@ -505,6 +506,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- Footer -->
 
 	<script src="js/scripts.min.js"></script>
 
