--- a/app/inner.html
+++ b/app/inner.html
@@ -25,7 +25,7 @@
 	<!-- Windows Phone -->
 	<meta name="msapplication-navbutton-color" content="#005b96">
 	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#005b96"></div>">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#005b96"></div>
 
 	<link rel="stylesheet" href="css/main.min.css">
 
@@ -113,47 +113,66 @@
 	<!-- Header -->
 
 
+	<!-- Main content -->
 	<main class="inner-content">
 
 		<section class="inner-page_banner-container">
 			<div class="inner-page_banner-item" style="background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(img/slider/slider-photo.jpg) 50% no-repeat; background-size: cover;">
-				<div class="inner-page_banner-content">
-					<h1>Поддержим порядок</h1>
-					<a href="javascript:void(0)" class="arrow-down_link"></a>
+				<div class="g-content">
+					<div class="container">
+						<div class="inner-page_banner-content">
+							<div class="inner_banner-desc">
+								<h1>Поддержим<br>порядок</h1>
+							</div>
+							<a href="#page" class="arrow-down_link anchor_link"></a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
 
-		<div class="inner-page">
-			<blockquote>Чистота — это не только залог здоровья, это основа продуктивности и успешности ваших сотрудников</blockquote>
-			<h1>Промышленная уборка</h1>
-			<h5>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</h5>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-			<p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-			<div class="col-2 gap-30">
-				<div class="inner-block">
-					<h4>Подзаголовок</h4>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
-				</div>
-				<div class="inner-block">
-					<h4>Подзаголовок</h4>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
-				</div>
-			</div>
-			<div class="col-2 gap-30">
-				<div class="inner-block">
-					<h4>Подзаголовок</h4>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
-				</div>
-				<div class="inner-block">
-					<h4>Подзаголовок</h4>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
+		<div class="white__content" id="page">
+			<div class="g-content">
+				<div class="container">
+					<div class="blockquote-right">
+						<blockquote>Чистота — это не только залог здоровья, это основа продуктивности и успешности ваших сотрудников</blockquote>
+					</div>
+					<div class="inner-page">
+						<h1>Промышленная уборка</h1>
+						<h5>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</h5>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+						<p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+						<div class="col-2 gap-30">
+							<div class="inner-block">
+								<h4>Подзаголовок</h4>
+								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
+							</div>
+							<div class="inner-block">
+								<h4>Подзаголовок</h4>
+								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
+							</div>
+						</div>
+						<div class="col-2 gap-30">
+							<div class="inner-block">
+								<h4>Подзаголовок</h4>
+								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
+							</div>
+							<div class="inner-block">
+								<h4>Подзаголовок</h4>
+								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
+							</div>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</div>
 
-	</main>
 
+	</main>
+	<!-- Main content -->
+
+	<div class="footer_line"></div>
 
 	<!-- Footer -->
 	<footer class="main__footer inner-page__footer">
@@ -168,6 +187,7 @@
 				</div>
 
 			</div>
+
 
 			<div class="col-2">
 				<div class="footer__block">
