--- a/app/index.html
+++ b/app/index.html
@@ -87,7 +87,7 @@
 							</div>
 
 							<a href="#" class="mobile-submenu_link">Сертификация</a>
-							<a href="#" class="mobile-submenu_link">Наши клиенты</a>
+							<a href="/clients.html" class="mobile-submenu_link">Наши клиенты</a>
 							<a href="#" class="mobile-submenu_link">Новости</a>
 							<a href="#" class="mobile-submenu_link">Контакты</a>
 						</div>
@@ -112,7 +112,7 @@
 								<a href="#" class="submenu_link" data-submenu="1">Услуги</a>
 								<a href="#" class="submenu_link" data-submenu="2">O SCS</a>
 								<a href="#" class="submenu_link" data-submenu="3">Сертификация</a>
-								<a href="#" class="submenu_link" data-submenu="4">Наши клиенты</a>
+								<a href="/clients.html" class="submenu_link" data-submenu="4">Наши клиенты</a>
 								<a href="#" class="submenu_link" data-submenu="5">Новости</a>
 								<a href="#" class="submenu_link">Контакты</a>
 							</nav>
@@ -287,7 +287,7 @@
 				<div class="ff-images__block">
 					<a href="#"><img src="img/logotypes/total-bw.png" alt="TOTAL"></a>
 				</div>
-				
+
 			</div>
 		</div>
 	</section>
