--- a/app/index.html
+++ b/app/index.html
@@ -572,9 +572,9 @@
 				<div class="footer__block">
 					<div class="footer__block-logotypes">
 						<div class="inline-middle">
-							<div class="footer__block-logo_item"><img src="/img/logotypes/ISO-9001.svg" alt="9001"></div>
-							<div class="footer__block-logo_item"><img src="/img/logotypes/ISO-22000.svg" alt="22000"></div>
-							<div class="footer__block-logo_item"><img src="/img/logotypes/UKAS.svg" alt="UKAS"></div>
+							<div class="footer__block-logo_item"><a href="img/slider/slider-photo.jpg" class="popup-link_image"><img src="/img/logotypes/ISO-9001.svg" alt="9001"></a></div>
+							<div class="footer__block-logo_item"><a href="img/slider/slider-photo.jpg" class="popup-link_image"><img src="/img/logotypes/ISO-22000.svg" alt="22000"></a></div>
+							<div class="footer__block-logo_item"><a href="img/slider/slider-photo.jpg" class="popup-link_image"><img src="/img/logotypes/UKAS.svg" alt="UKAS"></a></div>
 						</div>
 					</div>
 				</div>
@@ -582,6 +582,8 @@
 		</div>
 	</section>
 	<!-- Footer -->
+
+	<div id="popup" class="mfp-hide"></div>
 
 	<script src="js/scripts.min.js"></script>
 
