--- a/app/clients.html
+++ b/app/clients.html
@@ -25,7 +25,7 @@
 	<!-- Windows Phone -->
 	<meta name="msapplication-navbutton-color" content="#005b96">
 	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#005b96"></div>
+	<meta name="apple-mobile-web-app-status-bar-style" content="#005b96">
 
 	<link rel="stylesheet" href="css/main.min.css">
 
