--- a/app/contact.html
+++ b/app/contact.html
@@ -106,7 +106,9 @@
 					<div class="container">
 						<div class="col-a_1">
 							<div class="logotype">
-								<img src="img/logo.svg" alt="Ships Catering Supply">
+								<a href="/">
+									<img src="img/logo.svg" alt="Ships Catering Supply">
+								</a>
 							</div>
 							<nav class="menu__list">
 								<a href="#" class="submenu_link" data-submenu="1">Услуги</a>
@@ -166,7 +168,6 @@
 		<!-- Main menu -->
 	</header>
 	<!-- HEADER -->
-
 
 	<!-- Maps cities -->
 	<div class="footer_line contact_city-container">
