--- a/app/clients.html
+++ b/app/clients.html
@@ -106,7 +106,9 @@
 					<div class="container">
 						<div class="col-a_1">
 							<div class="logotype">
-								<img src="img/logo.svg" alt="Ships Catering Supply">
+								<a href="/">
+									<img src="img/logo.svg" alt="Ships Catering Supply">
+								</a>
 							</div>
 							<nav class="menu__list">
 								<a href="#" class="submenu_link" data-submenu="1">Услуги</a>
@@ -369,9 +371,9 @@
 				<div class="footer__block">
 					<div class="footer__block-logotypes">
 						<div class="inline-middle">
-							<div class="footer__block-logo_item"><img src="/img/logotypes/ISO-9001.svg" alt="9001"></div>
-							<div class="footer__block-logo_item"><img src="/img/logotypes/ISO-22000.svg" alt="22000"></div>
-							<div class="footer__block-logo_item"><img src="/img/logotypes/UKAS.svg" alt="UKAS"></div>
+							<div class="footer__block-logo_item"><a href="img/slider/slider-photo.jpg" class="popup-link_image"><img src="/img/logotypes/ISO-9001.svg" alt="9001"></a></div>
+							<div class="footer__block-logo_item"><a href="img/slider/slider-photo.jpg" class="popup-link_image"><img src="/img/logotypes/ISO-22000.svg" alt="22000"></a></div>
+							<div class="footer__block-logo_item"><a href="img/slider/slider-photo.jpg" class="popup-link_image"><img src="/img/logotypes/UKAS.svg" alt="UKAS"></a></div>
 						</div>
 					</div>
 				</div>
