--- a/app/contacts.html
+++ b/app/contacts.html
@@ -333,9 +333,9 @@
 				<div class="footer__block">
 					<div class="footer__block-logotypes">
 						<div class="inline-middle">
-							<div class="footer__block-logo_item"><img src="/img/logotypes/ISO-9001.svg" alt="9001"></div>
-							<div class="footer__block-logo_item"><img src="/img/logotypes/ISO-22000.svg" alt="22000"></div>
-							<div class="footer__block-logo_item"><img src="/img/logotypes/UKAS.svg" alt="UKAS"></div>
+							<div class="footer__block-logo_item"><a href="img/slider/slider-photo.jpg" class="popup-link_image"><img src="/img/logotypes/ISO-9001.svg" alt="9001"></a></div>
+							<div class="footer__block-logo_item"><a href="img/slider/slider-photo.jpg" class="popup-link_image"><img src="/img/logotypes/ISO-22000.svg" alt="22000"></a></div>
+							<div class="footer__block-logo_item"><a href="img/slider/slider-photo.jpg" class="popup-link_image"><img src="/img/logotypes/UKAS.svg" alt="UKAS"></a></div>
 						</div>
 					</div>
 				</div>
