--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>SCS</title>
+	<title>SCS — Index</title>
 	<meta name="description" content="">
 
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&display=swap" rel="stylesheet">
